--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
 <script src="pg18362.js"></script>
 <style type="text/css">
   body {
+          color: #909CC2;;
+
     background-color:#084887;
-  }
+        font-family: 'Montserrat', sans-serif;
+
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+a, a:link, a:hover, a:visited {
+            color: #909CC2;;
 
 
+}
+
+#footer {
+  height: 5vh;
+}
 
   #content {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100%;
+      height: 95vh;
+      flex: 1;
 
-      color: #909CC2;;
   }
 
   #innerContent {
@@ -25,7 +40,6 @@
   #saying {
     font-size: 4em;
     padding-bottom: 4vh;
-    font-family: 'Montserrat', sans-serif;
 
   }
 
@@ -38,6 +52,12 @@
     text-transform: lowercase;
   }
 
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 </style>
 <html>
   <body>
@@ -47,6 +67,15 @@
         <div id="section"></div>
         <div id="title"></div>
       </div>
+    </div>
+    <div id="footer">
+      Inspired by this
+      <a href="https://twitter.com/hels/status/1100247483345711104">tweet</a>
+      from
+      <a href="https://twitter.com/hels/">@hels</a>
+
+    -
+    Text from <a href="http://www.gutenberg.org/cache/epub/18362/pg18362-images.html">Project Gutenberg</a>
     </div>
   </body>
 </html>
